Closed Bug 238989 Opened 22 years ago Closed 22 years ago

[FIXr]whitespace after a </b> tag is ignored when enclosed inside <fieldset></fieldset> tags

Categories

(Core :: DOM: HTML Parser, defect, P1)

DEC
All
defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha1

People

(Reporter: sethborg, Assigned: bzbarsky)

References

Details

(Keywords: testcase)

Attachments

(4 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6) Gecko/20040206 Firefox/0.8 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6) Gecko/20040206 Firefox/0.8 <b>text</b> more text comes out looking like this: textmore text. <b>text </b> more text comes out correctly. I've been having to use <span style="font-weight: bold;">text</span> more text to make it look right. Reproducible: Always Steps to Reproduce: 1. Just try putting some whitespace after a </b> tag, it won't show up. 2. <b>text</b> more text comes out looking like this: textmore text. Actual Results: textmore text Expected Results: text more text
WFM 20040327 PC/WinXP Testcase forthcoming
Assignee: firefox → nobody
Component: General → Layout
Keywords: testcase
Product: Firefox → Browser
QA Contact: core.layout
Version: unspecified → Trunk
Attached file testcase
Summary: whitespace after a </b> tag is ignored → whitespace after a </b> tag is ignored when enclosed inside <fieldset></fieldset> tags
Attachment #144964 - Attachment mime type: text/plain → text/html
Confirming, Mozilla1.7b, Linux/x86.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Same as comment #19 in bug 48376, although I'm not entirely sure it's the same underlying issue as the original problem in bug 48376.
Assignee: nobody → parser
Component: Layout → HTML: Parser
Comment on attachment 145302 [details] [diff] [review] This should fix it So the problem here was that <fieldset> was marked as a tag which is allowed to discard all direct child whitespace that's not part of a text run. That seems pretty bogus to me.
Attachment #145302 - Flags: superreview?(peterv)
Attachment #145302 - Flags: review?(choess)
Why is that "bogus"
Because there is absolutely no reason that fieldset should be allowed to strip out whitespace? Perhaps a better question is, "why would that possibly be not bogus?"
Comment on attachment 145302 [details] [diff] [review] This should fix it Fine by me, although I don't really understand why we'd want kOmitWS at all.
Attachment #145302 - Flags: superreview?(peterv) → superreview+
Comment on attachment 145302 [details] [diff] [review] This should fix it What peterv said.
Attachment #145302 - Flags: review?(choess) → review+
It's meant to be an optimization (memory-saving, etc), I think. If you guys think we should remove it, I'll be up for that. Editor will likely thank us. ;)
Assignee: parser → bzbarsky
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → DEC
Summary: whitespace after a </b> tag is ignored when enclosed inside <fieldset></fieldset> tags → [FIXr]whitespace after a </b> tag is ignored when enclosed inside <fieldset></fieldset> tags
Target Milestone: --- → mozilla1.8alpha
Blocks: 48376
Actually, I _think_ that this patch should be safe enough for 1.7. Peterv, choess, what do you think?
for the record, removing kOmitWS sonuds like a swell idea to me.
Yeah, this should be safe for 1.7 imho.
Comment on attachment 145302 [details] [diff] [review] This should fix it Could this be approved for 1.7? This is a safe fix to keep us from mis-parsing content inside <fieldset>.
Attachment #145302 - Flags: approval1.7?
Comment on attachment 145302 [details] [diff] [review] This should fix it a=brendan@mozilla.org for 1.7 final. /be
Attachment #145302 - Flags: approval1.7? → approval1.7+
Checked in for 1.7. I've filed bug 240139 as a followup on the kOmitWS issue.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: