Merging patch by bzbarsky (from mozilla/htmlparser). Don't strip out whitespace inside <dl> and <fieldset> tags.  Bug 238989 and bug 48376, r=choess, sr=peterv, a=brendan and asa respectively.